Bug 534822 Address books get added with no name if created via altering default preferences (e.g. extension/mcd). r/sr=bienvenu